<resources>
    <string name="app_name">Task3</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="log_in">Log In</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="sign_up">Sign up</string>
    <string name="confirm_password">Confirm password</string>
    <string name="student_number">Student number</string>
    <string name="qualification">Qualification</string>
    <string name="username">Username</string>
</resources>